@@ -160,7 +160,20 @@ a computer framework for mass spectrometry, specifically for polymers.
 a utility to control a barco crt-projector over RS232.
 </ul>
 
+<ul>
+<li><a href="http://sourceforge.net/projects/byghound">Greyhounds</a> -
+a greyhound racing and breeding game.
+</ul>
 
+<ul>
+<li><a href="http://sourceforge.net/projects/bygfoot">Bygfoot</a> -
+a football manager game.
+</ul>
+
+<ul>
+<li><a href="http://www.gmdsoft.de/mitsch/software/boolmin/index.htm">BooleanMinimizer</a> -
+minimizes boolean functions; written in C++; runs on Linux, Solaris, Win32.
+</ul>
 
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
