@@ -1,3 +1,7 @@
+2004-02-26  Damon Chaplin  <damon@gnome.org>
+
+	* apps.html: added Greyhounds, Bygfoot and BooleanMinimizer.
+
 2004-01-26  Damon Chaplin  <damon@gnome.org>
 
 	* index.html: added link to new Win32 port.
